--- a/info.html
+++ b/info.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">Info</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
             <span id="headerbg"></span>
         </div>
