--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,13 @@
             <span id="headerbg"></span>
         </div>
         <div class="portfolio">
+            <a href="courses.html">
+            <div class="portL" style="background-color: lightgreen; padding-right: 30%; padding-left: 30%; margin-top: 100px; text-align: center;">
+                <h2>University Course Information</h2>
+                <p style="font-family: sans-serif;">A list of taken engineering and science courses</p>
+                <img style="border-radius: 5px; height: 300px;"src="pictures/EducationImage.png"/> </br>
+            </div></a>
+
             <div class="portL" id="port1" style="margin-top: 100px; text-align: center;">
                 <h2>Public Discord Bot</h2>
                 <p>Self-hosted bot created by me in Python using the Discord.py library</p>
@@ -54,7 +61,7 @@
                 <a href="https://shabbybrocante.com/">Website for my family's online shops</a> </br></br>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/Portfolio_Website.png"/> </br>
             </div>
-            <div class="portR" id="port4" style="text-align: center;">
+            <div class="portR" id="port4" style="background-color: lightgray; text-align: center;">
                 <h2>Unity Game Development</h2>
                 <a href="https://play.unity.com/u/lucas-reyna">Link to my Unity Projects</a>
                 </br></br></br>
