Changed Box widths

--- a/courses.html
+++ b/courses.html
@@ -19,13 +19,13 @@
         </div>
 
         <a href="https://www.calpoly.edu/">
-        <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; margin-top: 100px; text-align: center;">
+        <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; width: 25%; margin-top: 100px; text-align: center;">
                 <h2>California Polytechnic State University</h2>
                 <p style="font-size: 20px;">Undergraduate Student for Computer Engineering</p>
                 <img style="background-color: darkgreen; padding: 2%; height: 100px;"src="pictures/calpoly-logo-reversed-new.3dea1bfa.svg"/> </br>
         </div></a>
 
-        <div class="portR" id="courses2" style="background-color: lightgreen; margin-top: 100px; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
+        <div class="portR" id="courses2" style="background-color: lightgreen; margin-top: 100px; width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
                 <h1>Relevant Course Work</h1>
                 
                 <h2>Computer Science / Computer Engineering</h2>
@@ -74,7 +74,7 @@
         </div>
 
         <a href="https://github.com/LukeyReyno">
-        <div class="portL" id="courses1" style="background-color: lightgray; margin-top: 10px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
+        <div class="portL" id="courses1" style="background-color: lightgray; width: 25%; margin-top: 10px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
                 <img style="border-radius: 5px; height: 150px;"src="pictures/github.jpg"/> </br>
                 <p>Some school work and personal projects are on Github</p>
                 <p>https://github.com/LukeyReyno</p>
