fixed width and block issues on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
                 <li><a href="info.html">Info</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
-            <span id="headerbg"></span>
+            <span id="headerbg" style="top: 0px;"></span>
         </div>
         <div class="portfolio">
-            <a href="courses.html">
-            <div class="portL" style="background-color: lightgreen; padding-right: 30%; padding-left: 30%; margin-top: 100px; text-align: center;">
+            <a href="courses.html" style="display: block; margin-right: auto; margin-left: auto; width: 40%;">
+            <div id="coursesBlock">
                 <h2>University Course Information</h2>
-                <p style="font-family: sans-serif;">A list of taken engineering and science courses</p>
+                <p style="font-family: sans-serif;">A list of taken ENGINEERING and SCIENCE courses</p>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/EducationImage.png"/> </br>
             </div></a>
 
