--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="background-image: url(pictures/ResumeBackground.jpg);" lang="en">
     <head>
         <title>Lucas Reyna</title>
         <meta charset="UTF-8">
@@ -19,19 +19,7 @@
             <span id="headerbg"></span>
         </div>
         <div>
-            <img id="profile" src="pictures/2020Lucas.png" />
+            <embed id="resume" src="Files/ReynaLStudentResume.pdf">
         </div>
-        <section class="info">
-            <h2>Hello! My name is Lucas Reyna.</h2>
-            <p>I am a Computer Engineering Student at Cal Poly University</p>
-            <p>You can contact me through <a href="mailto: lreyna@calpoly.edu">lreyna@calpoly.edu</a></p>
-            <ul class="list"> <span id=listhead>Some of my interests include: </span>
-                <li>Robotics</li>
-                <li>Coding in Python, SystemVerilog, and Java</li>
-                <li>Amateur Web Design</li>
-                <li>Small Electronic Projects</li>
-                <li>PC Hardware and Computer Games</li>
-            </ul>
-        </section>
     </body>
 </html>
