--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">Info</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Résumé</a></li>
             </ul>
             <span id="headerbg"></span>
         </div>
