--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <title>Lucas Reyna</title>
         <meta charset="UTF-8">
-        <meta name="description" content = "Website created by LukeyReyno">
+        <meta name="description" content = "Personal Website for Lucas Reyna">
         <link rel="icon" href="icons/lr.ico">
         <link rel="stylesheet" href="lucas_style.css">
     </head>
