added courses and portfolio block for moonrift

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         </div>
         <div class="portfolio">
             <a href="courses.html" style="display: block; margin-right: auto; margin-left: auto; width: 40%;">
-            <div id="coursesBlock">
+            <div id="coursesBlock" style="box-shadow: 0 0 15px black;">
                 <h2>University Course Information</h2>
                 <p style="font-family: sans-serif;">A list of taken ENGINEERING and SCIENCE courses</p>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/EducationImage.png"/> </br>
@@ -37,6 +37,35 @@
                 <a href="https://top.gg/bot/223959196238872577">Pubically Verified through top.gg/bots</a>
             </div>
             <div class="portR" id="port2" style="margin-top: 100px; text-align: center;">
+                <h2>MoonRift Entertainment Internship</h2>
+                </br>
+                <a href="https://moonriftentertainment.com/">
+                <img style="border-radius: 5px; height: 200px;"src="pictures/moon-rift-logo.jpg"/></br></a>
+                <h2>6 Week Project </br> September 2021 - October 2021</h2>
+                <p> Opportunity to work remotely with a group of interns on a project for MoonRift</p>
+                <p> Working with the Unity Editor and integrating C# code</br></p>
+                <p> Specifically worked on a game titled "To Hell and Back"</br></p>
+                <p> This game is most similar to an infinite runner with some other unique elements</br></p>
+                <p> Implemented game mechanics and optimization to create a fluid user experience</br></p> 
+                <ul>My main take aways from working on a MoonRift Project: </br>
+                    <li>Concepts of using object pooling and recycling objects</li> 
+                    <li>Using the Unity Profiler to analyze the load on renderer and garbage collector</li> 
+                    <li>Heavy and clear communication between people that I have never met before</li>
+                    <li>Ability to give presentations on the status of said project</li>
+                </ul>
+                <img style="border-radius: 5px; height: 300px;"src="pictures/to-hell-and-back-capture.png"/> </br>
+                <a href="https://moonriftentertainment.com/">Link to the game that I worked on</a>
+            </div>
+            <div class="portL" id="port3" style="text-align: center;">
+                <h2>Some Websites for Experience</h2>
+                <p>I have begun to take an interest in Web Development</br>
+                   The websites that I created so far are fairly basic, but I hope to learn more</p>
+                <a href="https://lukeyreyno.github.io/lucas-website/index.html">This Website</a> </br>
+                <a href="https://lukeyreyno.github.io/lukeyreyno-website/">Support Site for my Discord Bot</a> </br>
+                <a href="https://shabbybrocante.com/">Website for my family's online shops</a> </br></br>
+                <img style="border-radius: 5px; height: 300px;"src="pictures/Portfolio_Website.png"/> </br>
+            </div>
+            <div class="portR" id="port4" style="text-align: center;">
                 <h2>FIRST Robotics Experience</h2>
                 <a href="https://www.team5458.com/">Team 5458 Website</a>
                 </br></br></br>
@@ -53,16 +82,7 @@
                 </ul>
                 <p>During college, I aided with the CAD mentorship in prepartion for the 2021 Build Season.</p>
             </div>
-            <div class="portL" id="port3" style="text-align: center;">
-                <h2>Some Websites for Experience</h2>
-                <p>I have begun to take an interest in Web Development</br>
-                   The websites that I created so far are fairly basic, but I hope to learn more</p>
-                <a href="https://lukeyreyno.github.io/lucas-website/index.html">This Website</a> </br>
-                <a href="https://lukeyreyno.github.io/lukeyreyno-website/">Support Site for my Discord Bot</a> </br>
-                <a href="https://shabbybrocante.com/">Website for my family's online shops</a> </br></br>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/Portfolio_Website.png"/> </br>
-            </div>
-            <div class="portR" id="port4" style="background-color: lightgray; text-align: center;">
+            <div class="portR" id="port6" style="background-color: lightgray; text-align: center;">
                 <h2>Unity Game Development</h2>
                 <a href="https://play.unity.com/u/lucas-reyna">Link to my Unity Projects</a>
                 </br></br></br>
