--- a/courses.html
+++ b/courses.html
@@ -27,7 +27,7 @@
         </div></a>
 
         <div class="portR" id="courses2" style="box-shadow: 0 0 0; background-color: rgb(231, 250, 230); margin-top: 100px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
-                <h1>Relevant Course Work</h1>
+                <h1>Course Work</h1>
                 
                 <h2>Computer Science / Computer Engineering</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/CSImage.jpg"/></br>
@@ -39,8 +39,11 @@
                     <p>CPE 203 - Proj-Based OO Prog and Design</p>
                     <p>CPE 233 - Computer Design & Assembly Language</p>
                     <p>CPE 315 - Computer Architecture</p>
+                    <p>CPE 327 - Digital Signals and Systems</p>
                     <p>CSC 348 - Discrete Structures</p>
+                    <p>CSC 349 - Algorithm Analysis</p>
                     <p>CPE 357 - Systems Programming</p>
+                    <p>CPE 367 - Digital Signals and Systems Lab</p>
                     <p>CSC 371 - Game Design</p>
                 </div></a></br>
 
@@ -56,12 +59,15 @@
                     <p>EE 241 - Circuit Analysis Lab II</p>
                     <p>EE 212 - Electric Circuit Analysis III</p>
                     <p>EE 242 - Circuit Analysis Lab III</p>
+                    <p>EE 306 - Semiconductors</p>
+                    <p>EE 346 - Semiconductors Lab</p>
                 </div></a></br>
 
                 <h2>Support Courses</h2>
                 <img style="border-radius: 5px; height: 350px;"src="pictures/SupportImage.jpg"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/">
                 <div style="background-color: rgb(255, 255, 217); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                    <p>ENGL 149 - Technical Writing for Engineers</p>
                     <p>MATH 143 - Calculus III</p>
                     <p>MATH 241 - Calculus IV</p>
                     <p>MATH 244 - Linear Analysis I</p>
@@ -70,7 +76,17 @@
                     <p>PHYS 133 - General Physics III</p>
                     <p>PHYS 211 - Modern Physics</p>
                     <p>CHEM 124 - General Chemistry</p>
+                </div></a></br>
+
+                <h2>General Education Requirements</h2>
+                <img style="border-radius: 5px; height: 300px;"src="pictures/general_courses.png"/></br>
+                <a href="https://catalog.calpoly.edu/coursesaz/">
+                <div style="background-color: rgb(255, 217, 255); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>COMS 101 - Public Speaking</p>
+                    <p>ECON 201 - Macroeconomics</p>
+                    <p>HIST 213 - Modern Political Economy</p>
+                    <p>HLTH 260 - Women's Health Issues</p>
+                    <p>POLS 111 - California Government</p>
                 </div></a></br>
         </div>
 
