--- a/courses.html
+++ b/courses.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="icons/lr.ico">
         <link rel="stylesheet" href="lucas_style.css">
     </head>
-    <body>
+    <body class="block_body" id="couses_body">
         <div class="header">
             <h1 id="LR">Lucas Reyna</h1>
             <ul>
@@ -19,14 +19,24 @@
             <span id="headerbg"></span>
         </div>
 
-        <a href="https://www.calpoly.edu/">
-        <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; min-width: 25%; margin-top: 100px; text-align: center;">
-                <h2>California Polytechnic State University</h2>
-                <p style="font-size: 20px;">Undergraduate Student for Computer Engineering</p>
-                <img style="background-color: darkgreen; padding: 2%; height: 100px;"src="pictures/calpoly-logo-reversed-new.3dea1bfa.svg"/> </br>
-        </div></a>
+        <div id="fixed_left_blocks">
+            <a href="https://www.calpoly.edu/">
+                <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; min-width: 25%; text-align: center;">
+                    <h2>California Polytechnic State University</h2>
+                    <p style="font-size: 20px;">Undergraduate Student for Computer Engineering</p>
+                    <img style="background-color: darkgreen; padding: 2%; height: 100px;"src="pictures/calpoly-logo-reversed-new.3dea1bfa.svg"/> </br>
+                </div>
+            </a>
+            <a href="https://github.com/LukeyReyno">
+                <div class="portL" id="courses1" style="background-color: lightgray; min-width: 25%; margin-top: 10px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
+                    <img style="border-radius: 5px; height: 150px;"src="pictures/github.jpg"/> </br>
+                    <p>Some school work and personal projects are on Github</p>
+                    <p>https://github.com/LukeyReyno</p>
+                </div>
+            </a>
+        </div>
 
-        <div class="portR" id="courses2" style="box-shadow: 0 0 0; background-color: rgb(231, 250, 230); margin-top: 100px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
+        <div class="portR" id="courses2" style="box-shadow: 0 0 0; background-color: rgb(231, 250, 230); margin-top: 80px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
                 <h1>Course Work</h1>
                 
                 <h2>Computer Science / Computer Engineering</h2>
@@ -89,12 +99,26 @@
                     <p>POLS 111 - California Government</p>
                 </div></a></br>
         </div>
-
-        <a href="https://github.com/LukeyReyno">
-        <div class="portL" id="courses1" style="background-color: lightgray; min-width: 25%; margin-top: 10px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
-                <img style="border-radius: 5px; height: 150px;"src="pictures/github.jpg"/> </br>
-                <p>Some school work and personal projects are on Github</p>
-                <p>https://github.com/LukeyReyno</p>
-        </div></a>
+        <script type="text/javascript">
+            function verify_block_fixiness(event) {
+                const body_object = document.getElementById("couses_body");
+                const body_styles = window.getComputedStyle(body_object);
+                const min_width = body_styles.getPropertyValue('min-width');
+                let curr_width = body_styles.width;
+                const left_blocks = document.getElementById("fixed_left_blocks");
+                if (curr_width <= min_width)
+                {
+                    left_blocks.style.float = 'left';
+                    left_blocks.style.position = 'relative';
+                }
+                else
+                {
+                    left_blocks.style.float = 'unset';
+                    left_blocks.style.position = 'fixed';
+                }
+            }
+            verify_block_fixiness();
+            window.addEventListener('resize', verify_block_fixiness);
+        </script>
     </body>
 </html>
