photo change and new colors

--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
             <span id="headerbg"></span>
         </div>
         <div>
-            <img id="profile" src="pictures/2020Lucas.png" />
+            <img id="profile" src="pictures/Lucas_Reyna_Headshot.png" />
         </div>
         <section class="info">
             <h2>Hello! My name is Lucas Reyna.</h2>
@@ -27,7 +27,8 @@
             <p>You can contact me through <a href="mailto: lreyna@calpoly.edu">lreyna@calpoly.edu</a></p>
             <ul class="list"> <span id=listhead>Some of my interests include: </span>
                 <li>Robotics</li>
-                <li>Coding in Python, SystemVerilog, and Java</li>
+                <li>Programming in Python, C, and Java</li>
+                <li>Unity Game Design using C#</li>
                 <li>Amateur Web Design</li>
                 <li>Small Electronic Projects</li>
                 <li>PC Hardware and Computer Games</li>
