--- a/courses.html
+++ b/courses.html
@@ -19,6 +19,7 @@
             <span id="headerbg"></span>
         </div>
 
+        <!--This are the fixed position left size information blocks--->
         <div id="fixed_left_blocks">
             <a href="https://www.calpoly.edu/">
                 <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; min-width: 25%; text-align: center;">
@@ -36,13 +37,13 @@
             </a>
         </div>
 
-        <div class="portR" id="courses2" style="box-shadow: 0 0 0; background-color: rgb(231, 250, 230); margin-top: 80px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
-                <h1>Course Work</h1>
+        <div class="portR" id="courses2" style="color: white; box-shadow: 0 0 0; background-color: rgb(0, 10, 20); margin-top: 80px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
+                <h1>University Course Work</h1>
                 
                 <h2>Computer Science / Computer Engineering</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/CSImage.jpg"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/cpe/">
-                <div style="background-color: rgb(187, 255, 217); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>CPE 101 - Fundamentals of Computer Sci</p>
                     <p>CPE 133 - Digital Design</p>
                     <p>CPE 202 - Data Structures</p>
@@ -60,7 +61,7 @@
                 <h2>Electrical Engineering</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/EEImage.png"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/ee/">
-                <div style="background-color: rgb(235, 255, 217); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>EE 111 - Intro Electrical Engineering</p>
                     <p>EE 151 - Intro to Electrical Engineering Lab</p>
                     <p>EE 113 - Electric Circuit Analysis I</p>
@@ -76,7 +77,7 @@
                 <h2>Support Courses</h2>
                 <img style="border-radius: 5px; height: 350px;"src="pictures/SupportImage.jpg"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/">
-                <div style="background-color: rgb(255, 255, 217); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>ENGL 149 - Technical Writing for Engineers</p>
                     <p>MATH 143 - Calculus III</p>
                     <p>MATH 241 - Calculus IV</p>
@@ -91,7 +92,7 @@
                 <h2>General Education Requirements</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/general_courses.png"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/">
-                <div style="background-color: rgb(255, 217, 255); padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>COMS 101 - Public Speaking</p>
                     <p>ECON 201 - Macroeconomics</p>
                     <p>HIST 213 - Modern Political Economy</p>
