organized portfolio objects in a new way

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,44 @@
             </ul>
             <span id="headerbg" style="top: 0px;"></span>
         </div>
-        <div class="portfolio">
-            <a href="courses.html" style="display: block; margin-right: auto; margin-left: auto; width: 40%;">
+
+        <script src="portfolio_script.js"></script>
+
+        <div class="portfolio" style="color: aliceblue;">
+            <h1> Click a block to see information</h1>
+
+            <div class="portfolio-object" onclick="expand(this)">
+                <span id="file-arrow">&#10224;</span>
+                <br>
+                <span>University Course Information</span>
+            </div>
+            <div class="portfolio-object">
+                <span>&#10224;</span>
+                <br>
+                <span>MoonRift Entertainment Internship</span>
+            </div>
+            <div class="portfolio-object">
+                <span id="file-arrow">&#10224;</span>
+                <br>
+                <span>Public Discord Bot</span>
+            </div>
+            <div class="portfolio-object">
+                <span id="file-arrow">&#10224;</span>
+                <br>
+                <span>Some Basic Web Experience</span>
+            </div>
+            <div class="portfolio-object">
+                <span id="file-arrow">&#10224;</span>
+                <br>
+                <span>FIRST Robotics Experience</span>
+            </div>
+            <div class="portfolio-object" id="last-portfolio-object">
+                <span id="file-arrow">&#10224;</span>
+                <br>
+                <span>Unity Game Development</span>
+            </div>
+
+            <!--a href="courses.html" style="display: block; margin-right: auto; margin-left: auto; width: 40%;">
             <div id="coursesBlock" style="box-shadow: 0 0 15px black;">
                 <h2>University Course Information</h2>
                 <p style="font-family: sans-serif;">A list of taken ENGINEERING and SCIENCE courses</p>
@@ -96,7 +132,7 @@
                 <img style="border-radius: 5px; height: 300px;"src="pictures/CubePioneer.png"/> </br>
                 <p></br>My other sizeable game is called "Cube Pioneer". 
                     </br>It is a 3D puzzle came where you must push cubes to their rightful destination.
-                    </br>I hope to learn more about Unity and possibly design more games in my free time.</p>
+                    </br>I hope to learn more about Unity and possibly design more games in my free time.</p -->
             </div>
         </div>
     </body>
