--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
         <div>
             <img id="profile" src="pictures/Lucas_Reyna_Headshot.png" />
         </div>
-        <section class="info">
+        <section class="info" style="color: white;">
             <h2>Hello! My name is Lucas Reyna.</h2>
             <p>I am a Computer Engineering Student at Cal Poly University</p>
             <p>You can contact me through <a href="mailto: lreyna@calpoly.edu">lreyna@calpoly.edu</a></p>
