--- a/portfolio.html
+++ b/portfolio.html
@@ -24,117 +24,53 @@
         <div class="portfolio" style="color: aliceblue;">
             <h1> Click a block to see information</h1>
 
-            <div class="portfolio-object" onclick="expand(this, 'course-info')">
-                <span class="file-arrow">&#10224;</span>
-                <br>
-                <span>University Course Information</span>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'course-info')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>University Course Information</span>
+                </div>
                 <div id="course-info"></div>
             </div>
-            <div class="portfolio-object" onclick="expand(this, 'moonrift')">
-                <span class="file-arrow">&#10224;</span>
-                <br>
-                <span>MoonRift Entertainment Internship</span>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'moonrift')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>MoonRift Entertainment Internship</span>
+                </div>
                 <div id="moonrift"></div>
             </div>
-            <div class="portfolio-object" onclick="expand(this)">
-                <span id="file-arrow">&#10224;</span>
-                <br>
-                <span>Public Discord Bot</span>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'discord')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>Public Discord Bot</span>
+                </div>
+                <div id="discord"></div>
             </div>
-            <div class="portfolio-object" onclick="expand(this)">
-                <span id="file-arrow">&#10224;</span>
-                <br>
-                <span>Some Basic Web Experience</span>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'website')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>Some Basic Web Experience</span>
+                </div>
+                <div id="website"></div>
             </div>
-            <div class="portfolio-object" onclick="expand(this)">
-                <span id="file-arrow">&#10224;</span>
-                <br>
-                <span>FIRST Robotics Experience</span>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'robotics')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>FIRST Robotics Experience</span>
+                </div>
+                <div id="robotics"></div>
             </div>
-            <div class="portfolio-object" id="last-portfolio-object" onclick="expand(this)">
-                <span id="file-arrow">&#10224;</span>
-                <br>
-                <span>Unity Game Development</span>
-            </div>
-
-            <!--a href="courses.html" style="display: block; margin-right: auto; margin-left: auto; width: 40%;">
-            <div id="coursesBlock" style="box-shadow: 0 0 15px black;">
-                <h2>University Course Information</h2>
-                <p style="font-family: sans-serif;">A list of taken ENGINEERING and SCIENCE courses</p>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/EducationImage.png"/> </br>
-            </div></a>
-
-            <div class="portL" id="port1" style="margin-top: 100px; text-align: center;">
-                <h2>Public Discord Bot</h2>
-                <p>Self-hosted bot created by me in Python using the Discord.py library</p>
-                <a href="https://discord.com/oauth2/authorize?client_id=223959196238872577&scope=bot%20applications.commands&permissions=2147609664">Direct Link to Bot Invite</br>(Must be logged into Discord)</a>
-                <p>Multi-purpose text command and game bot. </br>This bot can also search for images using the reddit commands.</p>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/WaluigiBotHelp.png"/> </br>
-                <p>Officially verified by Discord as of March 24, 2021</p>
-                <a href="https://discord.bots.gg/bots/223959196238872577">Pubically Verified through discord.bots.gg</a> </br></br>
-                <a href="https://top.gg/bot/223959196238872577">Pubically Verified through top.gg/bots</a>
-            </div>
-            <div class="portR" id="port2" style="margin-top: 100px; text-align: center;">
-                <h2>MoonRift Entertainment Internship</h2>
-                </br>
-                <a href="https://moonriftentertainment.com/">
-                <img style="border-radius: 5px; height: 200px;"src="pictures/moon-rift-logo.jpg"/></br></a>
-                <h2>6 Week Project </br> September 2021 - October 2021</h2>
-                <p> Opportunity to work remotely with a group of interns on a project for MoonRift</p>
-                <p> Working with the Unity Editor and integrating C# code</br></p>
-                <p> Specifically worked on a game titled "To Hell and Back"</br></p>
-                <p> This game is most similar to an infinite runner with some other unique elements</br></p>
-                <p> Implemented game mechanics and optimization to create a fluid user experience</br></p> 
-                <ul>My main take aways from working on a MoonRift Project: </br>
-                    <li>Concepts of using object pooling and recycling objects</li> 
-                    <li>Using the Unity Profiler to analyze the load on renderer and garbage collector</li> 
-                    <li>Heavy and clear communication between people that I have never met before</li>
-                    <li>Ability to give presentations on the status of said project</li>
-                </ul>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/to-hell-and-back-capture.png"/> </br>
-                <a href="https://moonrift.itch.io/moonjam-class-4">Link to the game that I worked on</a>
-            </div>
-            <div class="portL" id="port3" style="text-align: center;">
-                <h2>Some Websites for Experience</h2>
-                <p>I have begun to take an interest in Web Development</br>
-                   The websites that I created so far are fairly basic, but I hope to learn more</p>
-                <a href="https://lukeyreyno.github.io/lucas-website/index.html">This Website</a> </br>
-                <a href="https://lukeyreyno.github.io/lukeyreyno-website/">Support Site for my Discord Bot</a> </br>
-                <a href="https://shabbybrocante.com/">Website for my family's online shops</a> </br></br>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/Portfolio_Website.png"/> </br>
-            </div>
-            <div class="portR" id="port4" style="text-align: center;">
-                <h2>FIRST Robotics Experience</h2>
-                <a href="https://www.team5458.com/">Team 5458 Website</a>
-                </br></br></br>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/digital-minds.svg"/> </br>
-                <p>I was part of my local FIRST robotics team for most of High School</p>
-                <p> Heavily involved with the team for two full years, as the Design Lead.</br></p> 
-                <ul>My main take aways from being on the team: </br>
-                    <li>Learning how to use a CNC router with some G-code scripts</li> 
-                    <li>Implementing different CAD designs </li> 
-                    <li>Working on a project with a diverse group of peers</li>
-                    <li>Being able to commit to a deadline, and make descisions according to said deadline</li>
-                    <li>Development of professional communication skills</li>
-                    <li>First REAL exposure to the world of engineering</li> 
-                </ul>
-                <p>During college, I aided with the CAD mentorship in prepartion for the 2021 Build Season.</p>
-            </div>
-            <div class="portR" id="port6" style="background-color: lightgray; text-align: center;">
-                <h2>Unity Game Development</h2>
-                <a href="https://play.unity.com/u/lucas-reyna">Link to my Unity Projects</a>
-                </br></br></br>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/DemicDash.png"/> </br>
-                <p>I took a Video Game Design course at Cal Poly for a quarter, 
-                    </br>we used the Unity engine to build different games.
-                    </br>The major project of the term was to create a full game in a group.
-                    </br>Our final subsmission, "Demic Dash" demonstrates many different features
-                    </br>and design philosophies learned throughout the quarter.
-                    </br>This group project was another great experience to get hands on learning with teams.</p></br>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/CubePioneer.png"/> </br>
-                <p></br>My other sizeable game is called "Cube Pioneer". 
-                    </br>It is a 3D puzzle came where you must push cubes to their rightful destination.
-                    </br>I hope to learn more about Unity and possibly design more games in my free time.</p -->
+            <div class="portfolio-header" id="last-portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'unity')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>Unity Game Development</span>
+                </div>
+                <div id="unity"></div>
             </div>
         </div>
     </body>
