added new courses from winter 2022

--- a/courses.html
+++ b/courses.html
@@ -56,7 +56,7 @@
                     <p>CPE 357 - Systems Programming</p>
                     <p>CPE 367 - Digital Signals and Systems Lab</p>
                     <p>CSC 371 - Game Design</p>
-                </div></a></br>
+                </div></a><br>
 
                 <h2>Electrical Engineering</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/EEImage.png"/></br>
@@ -72,6 +72,8 @@
                     <p>EE 242 - Circuit Analysis Lab III</p>
                     <p>EE 306 - Semiconductors</p>
                     <p>EE 346 - Semiconductors Lab</p>
+                    <p>EE 307 - Digital Electronics and Integrated Circuits</p>
+                    <p>EE 347 - Digital Electronics and Integrated Circuits Lab</p>
                 </div></a></br>
 
                 <h2>Support Courses</h2>
@@ -87,18 +89,21 @@
                     <p>PHYS 133 - General Physics III</p>
                     <p>PHYS 211 - Modern Physics</p>
                     <p>CHEM 124 - General Chemistry</p>
-                </div></a></br>
+                    <p>STAT 350 - Probability and Random Processes for Engineers</p>
+                </div></a><br>
 
                 <h2>General Education Requirements</h2>
                 <img style="border-radius: 5px; height: 300px;"src="pictures/general_courses.png"/></br>
                 <a href="https://catalog.calpoly.edu/coursesaz/">
                 <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
                     <p>COMS 101 - Public Speaking</p>
+                    <p>  MU 101 - Introduction to Music Theory</p>
                     <p>ECON 201 - Macroeconomics</p>
                     <p>HIST 213 - Modern Political Economy</p>
                     <p>HLTH 260 - Women's Health Issues</p>
                     <p>POLS 111 - California Government</p>
-                </div></a></br>
+                    <p>PHIL 231 - Ethics and Political Philosophy</p>
+                </div></a><br>
         </div>
         <script type="text/javascript">
             function verify_block_fixiness(event) {
