added niantic inc experience

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,14 @@
                 <div id="course-info"></div>
             </div>
             <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 'niantic')">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>Niantic, Inc. Internship</span>
+                </div>
+                <div id="niantic"></div>
+            </div>
+            <div class="portfolio-header">
                 <div class="portfolio-header-clickable" onclick="expand(this, 'moonrift')">
                     <span class="file-arrow">&#10224;</span>
                     <br>
