added spring 2022 classes

--- a/courses.html
+++ b/courses.html
@@ -49,13 +49,16 @@
                     <p>CPE 202 - Data Structures</p>
                     <p>CPE 203 - Proj-Based OO Prog and Design</p>
                     <p>CPE 233 - Computer Design & Assembly Language</p>
+                    <p>CSC 307 - Intro to Software Engineering</p>
                     <p>CPE 315 - Computer Architecture</p>
+                    <p>CPE 316 - Microcontrollers and Embedded Applications</p>
                     <p>CPE 327 - Digital Signals and Systems</p>
                     <p>CSC 348 - Discrete Structures</p>
                     <p>CSC 349 - Algorithm Analysis</p>
                     <p>CPE 357 - Systems Programming</p>
                     <p>CPE 367 - Digital Signals and Systems Lab</p>
                     <p>CSC 371 - Game Design</p>
+                    <p>CPE 464 - Intro to Computer Networks</p>
                 </div></a><br>
 
                 <h2>Electrical Engineering</h2>
