added gitfit section

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <h1> Click a block to see information</h1>
 
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'course-info')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 0)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>University Course Information</span>
@@ -33,7 +33,7 @@
                 <div id="course-info"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'niantic')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 1)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Niantic, Inc. Internship</span>
@@ -41,7 +41,15 @@
                 <div id="niantic"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'moonrift')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 2)">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
+                    <span>Fitness Web App Project for Software Engineering Course</span>
+                </div>
+                <div id="gitfit"></div>
+            </div>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 3)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>MoonRift Entertainment Internship</span>
@@ -49,7 +57,7 @@
                 <div id="moonrift"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'discord')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 4)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Public Discord Bot</span>
@@ -57,15 +65,15 @@
                 <div id="discord"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'website')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 5)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
-                    <span>Some Basic Web Experience</span>
+                    <span>Static Web Experience</span>
                 </div>
                 <div id="website"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'robotics')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 6)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>FIRST Robotics Experience</span>
@@ -73,7 +81,7 @@
                 <div id="robotics"></div>
             </div>
             <div class="portfolio-header" id="last-portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 'unity')">
+                <div class="portfolio-header-clickable" onclick="expand(this, 7)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Unity Game Development</span>
