--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,20 @@
                 <div class="portfolio-header-clickable" onclick="expand(this, 2)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
+                    <span>Introduction to Networks Projects</span>
+                </div>
+                <div id="networks"></div>
+            </div>
+            <div class="portfolio-header">
+                <div class="portfolio-header-clickable" onclick="expand(this, 3)">
+                    <span class="file-arrow">&#10224;</span>
+                    <br>
                     <span>Fitness Web App Project for Software Engineering Course</span>
                 </div>
                 <div id="gitfit"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 3)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 4)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>MoonRift Entertainment Internship</span>
@@ -57,7 +65,7 @@
                 <div id="moonrift"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 4)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 5)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Public Discord Bot</span>
@@ -65,7 +73,7 @@
                 <div id="discord"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 5)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 6)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Static Web Experience</span>
@@ -73,7 +81,7 @@
                 <div id="website"></div>
             </div>
             <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 6)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 7)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>FIRST Robotics Experience</span>
@@ -81,7 +89,7 @@
                 <div id="robotics"></div>
             </div>
             <div class="portfolio-header" id="last-portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 7)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 8)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
                     <span>Unity Game Development</span>
