updated resume page

--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
         </div>
         <div id="resume">
             <h3 id="resumeHTML">hello</h3>
-            <embed id="resumeViewer" src=""></embed>
+            <embed id="resumeViewer" src="" alt="pdf"></embed>
         </div>
         <script type="text/javascript">
             document.getElementById("resumeViewer").src = "Files/ReynaLStudentResume.pdf";
