--- a/info.html
+++ b/info.html
@@ -19,19 +19,20 @@
             <span id="headerbg"></span>
         </div>
         <div>
-            <img id="profile" src="pictures/Lucas_Reyna_Headshot.png" />
+            <img id="profile" src="pictures/Lucas_Headshot.jpg" />
         </div>
         <section class="info" style="color: white;">
-            <h2>Hello! My name is Lucas Reyna.</h2>
-            <p>I am a Computer Engineering Student at Cal Poly University</p>
-            <p>You can contact me through <a href="mailto: lreyna@calpoly.edu">lreyna@calpoly.edu</a></p>
-            <ul class="list"> <span id=listhead>Some of my interests include: </span>
+            <h2>Hello! My name is Lucas Reyna</h2>
+            <p>I am currently a Software Engineer at Niantic developing AR experiences</p>
+            <p>2023 Summa Cum Laude Graduate from Cal Poly in Computer Engineering</p>
+            <p>You can contact me through <a href="mailto: lucasreyna@nianticlabs.com">lucasreyna@nianticlabs.com</a></p>
+            <ul class="list"> <span id=listhead>Some of my technical interests include: </span>
+                <li>Mixed Reality and Computer Vision</li>
+                <li>Graphics Technology</li>
+                <li>Game Development using Unity</li>
                 <li>Robotics</li>
-                <li>Programming in Python, C, and Java</li>
-                <li>Unity Game Design using C#</li>
-                <li>Amateur Web Design</li>
-                <li>Small Electronic Projects</li>
-                <li>PC Hardware and Computer Games</li>
+                <li>Hobbyst Electronic Projects</li>
+                <li>Amateur CAD-ing for 3D Printing</li>
             </ul>
         </section>
     </body>
