--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                 <div class="portfolio-header-clickable" onclick="expand(this, 4)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
-                    <span>MoonRift Entertainment Internship</span>
+                    <span>MoonRift Entertainment Game Jam</span>
                 </div>
                 <div id="moonrift"></div>
             </div>
@@ -76,23 +76,15 @@
                 <div class="portfolio-header-clickable" onclick="expand(this, 6)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
-                    <span>Static Web Experience</span>
-                </div>
-                <div id="website"></div>
-            </div>
-            <div class="portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 7)">
-                    <span class="file-arrow">&#10224;</span>
-                    <br>
                     <span>FIRST Robotics Experience</span>
                 </div>
                 <div id="robotics"></div>
             </div>
             <div class="portfolio-header" id="last-portfolio-header">
-                <div class="portfolio-header-clickable" onclick="expand(this, 8)">
+                <div class="portfolio-header-clickable" onclick="expand(this, 7)">
                     <span class="file-arrow">&#10224;</span>
                     <br>
-                    <span>Unity Game Development</span>
+                    <span>Unity College Course</span>
                 </div>
                 <div id="unity"></div>
             </div>
