--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
             <embed id="resumeViewer" src="" alt="pdf"></embed>
         </div>
         <script type="text/javascript">
-            document.getElementById("resumeViewer").src = "Files/ReynaLStudentResume.pdf";
+            document.getElementById("resumeViewer").src = "Files/ReynaLResume.pdf";
             resumeModifiedDate = document.lastModified
             document.getElementById("resumeHTML").innerHTML = "Last Modified: " + resumeModifiedDate;
         </script>
