--- a/courses.html
+++ b/courses.html
@@ -18,95 +18,113 @@
             </ul>
             <span id="headerbg"></span>
         </div>
+        <div id="course-block-context" style="margin-top: 50px;">
+            <!--This are the fixed position left size information blocks--->
+            <div id="fixed_left_blocks">
+                <a href="pictures/lucas_calpoly_diploma_2023.png">
+                    <div class="portL" id="courses1" style="color: lightgray; background-color: beige; min-width: 25%; text-align: center;">
+                        <img style="border-radius: 5px; width: 390px;"src="pictures/lucas_calpoly_diploma_2023.png"/> </br>
+                    </div>
+                </a>
+                <a href="https://www.calpoly.edu/">
+                    <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; min-width: 25%; margin-top: 10px; text-align: center;">
+                        <h2>California Polytechnic State University</h2>
+                        <p style="font-size: 20px;">Undergraduate Student for Computer Engineering</p>
+                        <img style="background-color: darkgreen; padding: 2%; height: 100px;"src="pictures/calpoly-logo-reversed-new.3dea1bfa.svg"/> </br>
+                    </div>
+                </a>
+                <a href="https://github.com/LukeyReyno">
+                    <div class="portL" id="courses1" style="background-color: lightgray; min-width: 25%; margin-top: 10px; margin-bottom: 150px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
+                        <img style="border-radius: 5px; height: 150px;"src="pictures/github.jpg"/> </br>
+                        <p>Some school work and personal projects are on Github</p>
+                        <p>https://github.com/LukeyReyno</p>
+                    </div>
+                </a>
+            </div>
 
-        <!--This are the fixed position left size information blocks--->
-        <div id="fixed_left_blocks">
-            <a href="https://www.calpoly.edu/">
-                <div class="portL" id="courses1" style="color: lightgray; background-color: darkgreen; min-width: 25%; text-align: center;">
-                    <h2>California Polytechnic State University</h2>
-                    <p style="font-size: 20px;">Undergraduate Student for Computer Engineering</p>
-                    <img style="background-color: darkgreen; padding: 2%; height: 100px;"src="pictures/calpoly-logo-reversed-new.3dea1bfa.svg"/> </br>
-                </div>
-            </a>
-            <a href="https://github.com/LukeyReyno">
-                <div class="portL" id="courses1" style="background-color: lightgray; min-width: 25%; margin-top: 10px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; text-align: center;">
-                    <img style="border-radius: 5px; height: 150px;"src="pictures/github.jpg"/> </br>
-                    <p>Some school work and personal projects are on Github</p>
-                    <p>https://github.com/LukeyReyno</p>
-                </div>
-            </a>
-        </div>
+            <div class="portR" id="courses2" style="color: white; box-shadow: 0 0 0; background-color: rgb(0, 10, 20); min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
+                    <h1>University Course Work</h1>
+                    
+                    <h2>Computer Science / Computer Engineering</h2>
+                    <img style="border-radius: 5px; height: 300px;"src="pictures/CSImage.jpg"/></br>
+                    <a href="https://catalog.calpoly.edu/coursesaz/cpe/">
+                    <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                        <p>CPE 101 - Fundamentals of Computer Sci</p>
+                        <p>CPE 133 - Digital Design</p>
+                        <p>CPE 202 - Data Structures</p>
+                        <p>CPE 203 - Proj-Based OO Prog and Design</p>
+                        <p>CPE 233 - Computer Design & Assembly Language</p>
+                        <p>CSC 307 - Intro to Software Engineering</p>
+                        <p>CPE 315 - Computer Architecture</p>
+                        <p>CPE 316 - Microcontrollers and Embedded Applications</p>
+                        <p>CSC 321 - Intro to Computer Security</p>
+                        <p>CPE 327 - Digital Signals and Systems</p>
+                        <p>CSC 348 - Discrete Structures</p>
+                        <p>CSC 349 - Algorithm Analysis</p>
+                        <p>CPE 350 - Capstone I</p>
+                        <p>CPE 357 - Systems Programming</p>
+                        <p>CPE 367 - Digital Signals and Systems Lab</p>
+                        <p>CSC 371 - Game Design</p>
+                        <p>CPE 450 - Capstone II</p>
+                        <p>CPE 453 - Intro to Operating Systems</p>
+                        <p>CPE 461 - Senior Project I</p>
+                        <p>CPE 462 - Senior Project II</p>
+                        <p>CPE 464 - Intro to Computer Networks</p>
+                        <p>CPE 480 - Artificial Intelligence</p>
+                        <p>CPE 487 - Deep Learning</p>
+                        <p>CPE 570 - Current Topics: Software Performance Evaluation</p>
+                    </div></a><br>
 
-        <div class="portR" id="courses2" style="color: white; box-shadow: 0 0 0; background-color: rgb(0, 10, 20); margin-top: 80px; min-width: 40%; text-align: center; font-family: Gill Sans Extrabold, sans-serif;">
-                <h1>University Course Work</h1>
-                
-                <h2>Computer Science / Computer Engineering</h2>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/CSImage.jpg"/></br>
-                <a href="https://catalog.calpoly.edu/coursesaz/cpe/">
-                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
-                    <p>CPE 101 - Fundamentals of Computer Sci</p>
-                    <p>CPE 133 - Digital Design</p>
-                    <p>CPE 202 - Data Structures</p>
-                    <p>CPE 203 - Proj-Based OO Prog and Design</p>
-                    <p>CPE 233 - Computer Design & Assembly Language</p>
-                    <p>CSC 307 - Intro to Software Engineering</p>
-                    <p>CPE 315 - Computer Architecture</p>
-                    <p>CPE 316 - Microcontrollers and Embedded Applications</p>
-                    <p>CPE 327 - Digital Signals and Systems</p>
-                    <p>CSC 348 - Discrete Structures</p>
-                    <p>CSC 349 - Algorithm Analysis</p>
-                    <p>CPE 357 - Systems Programming</p>
-                    <p>CPE 367 - Digital Signals and Systems Lab</p>
-                    <p>CSC 371 - Game Design</p>
-                    <p>CPE 464 - Intro to Computer Networks</p>
-                </div></a><br>
+                    <h2>Electrical Engineering</h2>
+                    <img style="border-radius: 5px; height: 300px;"src="pictures/EEImage.png"/></br>
+                    <a href="https://catalog.calpoly.edu/coursesaz/ee/">
+                    <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                        <p>EE 111 - Intro Electrical Engineering</p>
+                        <p>EE 151 - Intro to Electrical Engineering Lab</p>
+                        <p>EE 113 - Electric Circuit Analysis I</p>
+                        <p>EE 143 - Electronic Manufacturing & Circuit Analysis Lab I</p>
+                        <p>EE 211 - Electric Circuit Analysis II</p>
+                        <p>EE 241 - Circuit Analysis Lab II</p>
+                        <p>EE 212 - Electric Circuit Analysis III</p>
+                        <p>EE 242 - Circuit Analysis Lab III</p>
+                        <p>EE 306 - Semiconductors</p>
+                        <p>EE 346 - Semiconductors Lab</p>
+                        <p>EE 307 - Digital Electronics and Integrated Circuits</p>
+                        <p>EE 347 - Digital Electronics and Integrated Circuits Lab</p>
+                        <p>EE 428 - Computer Vision</p>
+                    </div></a></br>
 
-                <h2>Electrical Engineering</h2>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/EEImage.png"/></br>
-                <a href="https://catalog.calpoly.edu/coursesaz/ee/">
-                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
-                    <p>EE 111 - Intro Electrical Engineering</p>
-                    <p>EE 151 - Intro to Electrical Engineering Lab</p>
-                    <p>EE 113 - Electric Circuit Analysis I</p>
-                    <p>EE 143 - Electronic Manufacturing & Circuit Analysis Lab I</p>
-                    <p>EE 211 - Electric Circuit Analysis II</p>
-                    <p>EE 241 - Circuit Analysis Lab II</p>
-                    <p>EE 212 - Electric Circuit Analysis III</p>
-                    <p>EE 242 - Circuit Analysis Lab III</p>
-                    <p>EE 306 - Semiconductors</p>
-                    <p>EE 346 - Semiconductors Lab</p>
-                    <p>EE 307 - Digital Electronics and Integrated Circuits</p>
-                    <p>EE 347 - Digital Electronics and Integrated Circuits Lab</p>
-                </div></a></br>
+                    <h2>Support Courses</h2>
+                    <img style="border-radius: 5px; height: 350px;"src="pictures/SupportImage.jpg"/></br>
+                    <a href="https://catalog.calpoly.edu/coursesaz/">
+                    <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                        <p>ENGL 149 - Technical Writing for Engineers</p>
+                        <p>MATH 143 - Calculus III</p>
+                        <p>MATH 241 - Calculus IV</p>
+                        <p>MATH 244 - Linear Analysis I</p>
+                        <p>PHYS 141 - General Physics IA</p>
+                        <p>PHYS 132 - General Physics II</p>
+                        <p>PHYS 133 - General Physics III</p>
+                        <p>PHYS 211 - Modern Physics</p>
+                        <p>CHEM 124 - General Chemistry</p>
+                        <p>STAT 350 - Probability and Random Processes for Engineers</p>
+                    </div></a><br>
 
-                <h2>Support Courses</h2>
-                <img style="border-radius: 5px; height: 350px;"src="pictures/SupportImage.jpg"/></br>
-                <a href="https://catalog.calpoly.edu/coursesaz/">
-                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
-                    <p>ENGL 149 - Technical Writing for Engineers</p>
-                    <p>MATH 143 - Calculus III</p>
-                    <p>MATH 241 - Calculus IV</p>
-                    <p>MATH 244 - Linear Analysis I</p>
-                    <p>PHYS 141 - General Physics IA</p>
-                    <p>PHYS 132 - General Physics II</p>
-                    <p>PHYS 133 - General Physics III</p>
-                    <p>PHYS 211 - Modern Physics</p>
-                    <p>CHEM 124 - General Chemistry</p>
-                    <p>STAT 350 - Probability and Random Processes for Engineers</p>
-                </div></a><br>
-
-                <h2>General Education Requirements</h2>
-                <img style="border-radius: 5px; height: 300px;"src="pictures/general_courses.png"/></br>
-                <a href="https://catalog.calpoly.edu/coursesaz/">
-                <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
-                    <p>COMS 101 - Public Speaking</p>
-                    <p>  MU 101 - Introduction to Music Theory</p>
-                    <p>ECON 201 - Macroeconomics</p>
-                    <p>HIST 213 - Modern Political Economy</p>
-                    <p>HLTH 260 - Women's Health Issues</p>
-                    <p>POLS 111 - California Government</p>
-                    <p>PHIL 231 - Ethics and Political Philosophy</p>
-                </div></a><br>
+                    <h2>General Education Requirements</h2>
+                    <img style="border-radius: 5px; height: 300px;"src="pictures/general_courses.png"/></br>
+                    <a href="https://catalog.calpoly.edu/coursesaz/">
+                    <div style="padding: 1%; border-radius: 35px; padding-left: 5%; margin-top: 1%; text-align: left;">
+                        <p>COMS 101 - Public Speaking</p>
+                        <p>  MU 101 - Introduction to Music Theory</p>
+                        <p>ECON 201 - Macroeconomics</p>
+                        <p>HIST 213 - Modern Political Economy</p>
+                        <p>HLTH 260 - Women's Health Issues</p>
+                        <p>ISLA 303 - Values and Technology</p>
+                        <p>  LA 212 - Modern Landscape Architecture</p>
+                        <p>POLS 111 - California Government</p>
+                        <p>PHIL 231 - Ethics and Political Philosophy</p>
+                    </div></a><br>
+            </div>
         </div>
         <script type="text/javascript">
             function verify_block_fixiness(event) {
